--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
-// {
-//   "semi": false,
-//   "singleQuote": true,
-//   "trailingComma": "es5"
-// }
+{
+  "printWidth": 120,
+  "semi": false,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5"
+}
